todostyle.css
*{
    box-sizing: border-box;
}
body{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color:aqua;
}

h2.header2{
    display: flex;
    flex-direction: column;
    width: 500px;
    align-items: center;
}

#inputDiv{
    display: flex;
    width: 500px;
    border: 1px solid aqua;
    border-radius: 2px;
    padding: 15px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);

}
#inpfield{
    flex-grow: 1;
    
}
#statusDiv{
    display: flex;
    justify-content: space-between ;
    text-align: center;
    width: 500px;
    border-radius: 4px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.18), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    padding:2px;
}
.statusElementDiv{
    display: flex;
    flex-direction: row;
    align-items: center;
    border-style: solid;
    border-color:azure;
    border-width: 1px;
    border-radius: 4px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.16), 0 6px 20px 0 rgba(0, 0, 0, 0.18);
    background-color: aqua;
    padding: 0px 12px 0 12px;
}

.statusIcon{
    display: flex;
    width: 28px;          
    height: 28px; 
}
.statusColumn{
    display: flex;
    flex-direction: column;
    padding: 4px;
}

#task_body{
    /*width: 300px;*/
    border: 0px solid aqua;
    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
}
#taskBodyHead{
    background-color:azure;
    padding: 4px;
    text-align: center;
}
.taskDiv{
    display: flex;
    align-items: center;
    width: 500px;       
    margin-top: 4px;
    padding: 10px;
    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
   
}
.todotextspan{
    margin-left: 8px;    
    flex-grow: 1;
    word-break: break-word; /* prevents the extremely long word problem */
             
}
.deleteBtn {
    width: 20px;          
    height: 20px;         
/*    margin-left: auto;    /* Pushes the icon to the far right of the task row */

}

